--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/web builds.loader.js";
       var config = {
-        dataUrl: buildUrl + "/web builds.data.br",
-        frameworkUrl: buildUrl + "/web builds.framework.js.br",
-        codeUrl: buildUrl + "/web builds.wasm.br",
+        dataUrl: buildUrl + "/web builds.data.unityweb",
+        frameworkUrl: buildUrl + "/web builds.framework.js.unityweb",
+        codeUrl: buildUrl + "/web builds.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "TrueMeridian",
         productName: "ElectronicsStoreDemo",
